--- a/ins_prometheus.yml
+++ b/ins_prometheus.yml
@@ -1,25 +1,66 @@
-- hosts: all
-  become: true
-  pre_tasks:
-  
-  - name: install updates (CentOS)
-    dnf:
-      update_only: yes
-      update_cache: yes
-    when: ansible_distribution == "Centos"
-    
-  - name: install updates (Ubuntu)
-    apt:
-      upgrade: dist
-      update_cache: yes
-    when: ansible_distribution == "Ubuntu"
-    
-- hosts: ubuntu_prometheus
-  become: true
-  roles:
-    - ubuntu_prometheus
+# /etc/ssh/sshd_config
 
-- hosts: centos_prometheus
-  become: true
-  roles:
-    - centos_prometheus
+# Specifies the port number that SSH server listens on.
+Port 22
+
+# Specifies the protocol versions the server supports.
+Protocol 2
+
+# Disable root login via SSH.
+PermitRootLogin no
+
+# Specifies whether password authentication is allowed.
+PasswordAuthentication yes
+
+# Specifies whether challenge-response authentication (keyboard-interactive) is allowed.
+ChallengeResponseAuthentication no
+
+# Specifies whether public key authentication is allowed.
+PubkeyAuthentication yes
+
+# Specifies the file containing public keys for authentication.
+AuthorizedKeysFile      .ssh/authorized_keys
+
+# Specifies whether users are allowed to use rhosts files for authentication.
+RhostsRSAAuthentication no
+HostbasedAuthentication no
+
+# Specifies whether the server will perform strict mode checking of user's home directory and rhosts file.
+StrictModes yes
+
+# Specifies whether TCP forwarding is permitted.
+AllowTcpForwarding yes
+
+# Specifies whether X11 forwarding is permitted.
+X11Forwarding yes
+
+# Specifies whether X11 display location is automatically forwarded.
+X11DisplayOffset 10
+
+# Specifies whether the `~/.ssh/known_hosts` file should be checked for host matching.
+CheckHostIP yes
+
+# Specifies whether the system-wide RSA authentication key for SSH is used.
+UseRSAAuthentication yes
+
+# Specifies whether rhosts or /etc/hosts.equiv authentication together with RSA host authentication is allowed.
+HostbasedAuthentication no
+
+# Specifies whether public key authentication will try to do keychain integration.
+# Note: Keychain integration is not supported in all versions of OpenSSH.
+UseLogin no
+
+# Specifies whether the server should look up the remote host name and check that the resolved host name for the client matches the canonical name stored in the known_hosts file.
+VerifyReverseMapping yes
+
+# Specifies the location of the host key files.
+HostKey /etc/ssh/ssh_host_rsa_key
+HostKey /etc/ssh/ssh_host_dsa_key
+HostKey /etc/ssh/ssh_host_ecdsa_key
+HostKey /etc/ssh/ssh_host_ed25519_key
+
+# Specifies the file that contains a list of allowed authentication methods.
+AuthMethods none
+
+# Specifies the file that contains a list of allowed authentication methods.
+AllowGroups sshusers
